snowplow-utils 0.16.2 (2024-02-XX)
---------------------------------------
## Summary
XXX

## Fixes
- Add new `parse_agg_dict` macro for use to generate aggregation sql in other packages

## Upgrading
To upgrade, bump the package version in your `packages.yml` file.

snowplow-utils 0.16.1 (2024-01-29)
---------------------------------------
## Summary
This release contains a fix to the unnest macro for redshift, which meant the query wasn't complete when using it without the index.

## Fixes
- Fix bug in redshift unnest macro

## Upgrading
To upgrade, bump the package version in your `packages.yml` file.

snowplow-utils 0.16.0 (2024-01-26)
---------------------------------------
## Summary
This release contains a new array size macro as well as the optional ability for the unnest macros to also surface the index of the original array element for preserving the order. It also contains some fixes for redshift. Please note that from this version onwards this package is under the SPAL license.

# Features
- Add get_array_size macro
- Add optional index to unnest

## Fixes
- Fix existing tests for redshift
- Fix issue with multiple end hooks failing (Close #152)

## Under the hood
- Update license to SPAL

## Upgrading
To upgrade, bump the package version in your `packages.yml` file.

snowplow-utils 0.15.2 (2023-10-13)
---------------------------------------
## Summary
This release contains a bug fix in our new `base` macros, which did not affect default behaviour. This also does not impact behavior in any of the Snowplow packages that rely on the utils package.

## Fixes
- Fix an incorrect default value in the `base_create_snowplow_events_this_run` macro.

## Upgrading
To upgrade, bump the package version in your `packages.yml` file.

snowplow-utils 0.15.1 (2023-09-29)
---------------------------------------
## Summary
This release combines a few bug fixes in our new `base` macros, including an issue with redshift query size limits.

## Fixes